tests/suite/snapshots/suite__check__tests__check__bad-assign-procedure.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-assign-procedure.xi:4:5]
   │
 4 │     _ = foo()
   ·     ────┬────  
   ·         ╰────── Cannot initialize with a procedure
───╯

